--- a/assets/templates/layout.pug
+++ b/assets/templates/layout.pug
@@ -2,10 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
-    script(src='../vendor/angular/angular.js')
-    script(src='../vendor/angular-ui-router/release/angular-ui-router.js')
-    script(src='../js/app.js')
-    script(src='../js/app.config.js')
+    block styles
+    block scripts
   body(ng-app='nodeChat')
     block content
