--- a/public/templates/layout/layout.pug
+++ b/public/templates/layout/layout.pug
@@ -2,13 +2,16 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/styles/bootstrap.css')
-    link(rel='stylesheet', href='/styles/bootstrap-theme.css')
-    link(rel='stylesheet', href='/styles/animate.css')
-    link(rel='stylesheet', href='/styles/main.css')
-    script(src='../js/angular.js')
-    script(src='../js/angular-ui-router.js')
-    script(src='../js/app.js')
+    link(rel='stylesheet', href='../../styles/bootstrap.css')
+    link(rel='stylesheet', href='../../styles/bootstrap-theme.css')
+    link(rel='stylesheet', href='../../styles/animate.css')
+    link(rel='stylesheet', href='../../styles/main.css')
+    script(src='../../js/jquery.js')
+    script(src='../../js/bootstrap.js')
+    script(src='../../js/angular.js')
+    script(src='../../js/angular-ui-router.js')
+    script(src='../../js/app.js')
 
   body(ng-app='nodeChat')
     block content
+
