add simple logic for chat;

--- a/public/templates/chat.pug
+++ b/public/templates/chat.pug
@@ -1,15 +1,10 @@
 extends layout/layout
 block content
-    p.lead Here should be chat
     script(src="../../js/socket.io.js")
-    //script(src="../../node_modules/socket.io-client/socket.io.js")
-    script.
-        var socket = io();
-        socket.on('news', function (data) {
-            console.log(data);
-            socket.emit('my other event', {my: 'data'});
-        });
-        socket.on('user disconnected', function (data) {
-            console.log('user disconnected');
-        });
+    div#chat
+        ul
+        form
+            input.form-control(autocomplete="off", autofocus="", placeholder="Enter your message")
+    script(src="../../js/chatRoom.js")
+
 
