add separation of chat users;

--- a/public/templates/chat.pug
+++ b/public/templates/chat.pug
@@ -5,6 +5,7 @@ block content
         ul
         form
             input.form-control(autocomplete="off", autofocus="", placeholder="Enter your message")
+            //button.btn.btn-primary(onclick="printMessage($(#chat input).value);") Send message
     script(src="../../js/chatRoom.js")
 
 
